{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 20,
  "lineage": "d3654237-c685-9651-ea5d-07530bafdd78",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eea855a3409a6c32",
            "arn": "arn:aws:ec2:us-east-1:895595075513:instance/i-00f6b34403c70ac67",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f6b34403c70ac67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Home",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02077013120c3aa3f",
            "private_dns": "ip-172-31-56-2.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.56.2",
            "public_dns": "ec2-100-25-135-73.compute-1.amazonaws.com",
            "public_ip": "100.25.135.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb648065325e7f61",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "Server security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0debb481c9aed129c",
            "tags": {
              "CostCenter": "Minecraft",
              "Name": "MinecraftServer"
            },
            "tags_all": {
              "CostCenter": "Minecraft",
              "Name": "MinecraftServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089cffece16ca8e18"
            ]
          },
          "dependencies": [
            "aws_key_pair.home",
            "aws_security_group.server_security_group",
            "data.aws_ami.linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895595075513:security-group/sg-089cffece16ca8e18",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-089cffece16ca8e18",
            "ingress": [],
            "name": "Server security group",
            "name_prefix": "",
            "owner_id": "895595075513",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cc6b76b19556ef3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allows outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-51865868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-089cffece16ca8e18",
            "security_group_rule_id": "sgr-0ee4e1de310ee4b92",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "24.98.230.114/32"
            ],
            "description": "SSH ingress traffic from server owner",
            "from_port": 22,
            "id": "sgrule-1168011934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089cffece16ca8e18",
            "security_group_rule_id": "sgr-03b3edf0811ba52c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Minecraft ingress traffic from players",
            "from_port": 25565,
            "id": "sgrule-1709177873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089cffece16ca8e18",
            "security_group_rule_id": "sgr-06e2cea3cfe900aff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 25565,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server_security_group"
          ]
        }
      ]
    }
  ]
}